tests/ui/transmutability/arrays/huge-len.stderr
error[E0277]: `()` cannot be safely transmuted into `ExplicitlyPadded`
  --> $DIR/huge-len.rs:21:41
   |
LL |     assert::is_maybe_transmutable::<(), ExplicitlyPadded>();
   |                                         ^^^^^^^^^^^^^^^^ values of the type `ExplicitlyPadded` are too big for the target architecture
   |
note: required by a bound in `is_maybe_transmutable`
  --> $DIR/huge-len.rs:8:14
   |
LL |     pub fn is_maybe_transmutable<Src, Dst>()
   |            --------------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>,
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_maybe_transmutable`

error[E0277]: `ExplicitlyPadded` cannot be safely transmuted into `()`
  --> $DIR/huge-len.rs:24:55
   |
LL |     assert::is_maybe_transmutable::<ExplicitlyPadded, ()>();
   |                                                       ^^ values of the type `ExplicitlyPadded` are too big for the target architecture
   |
note: required by a bound in `is_maybe_transmutable`
  --> $DIR/huge-len.rs:8:14
   |
LL |     pub fn is_maybe_transmutable<Src, Dst>()
   |            --------------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>,
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_maybe_transmutable`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
